--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@mdx-js/react": "^2.3.0",
     "gatsby": "^5.12.4",
+    "gatsby-plugin-mdx": "^5.12.3",
+    "gatsby-source-filesystem": "^5.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
