Página de lançamentos pronta

--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
     "gatsby": "^5.12.4",
+    "gatsby-plugin-image": "^3.12.3",
     "gatsby-plugin-mdx": "^5.12.3",
+    "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-source-filesystem": "^5.12.1",
+    "gatsby-transformer-sharp": "^5.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
